--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
